changes to app.py and the main workout page

--- a/templates/muscles.html
+++ b/templates/muscles.html
@@ -12,7 +12,7 @@
     <div class="m-div">
         <a href="/muscle/{{ muscle }}"><img class="m-groups" src="{{ all_items.image }}" alt="" id="{{ muscle }}"></a>
         <a href="{{ muscle }}">
-            <h3 class="m-h3">{{ muscle }}</h3>
+            <h3 class="m-h3">{{ all_items.muscle }}</h3>
         </a>
     </div>
     {% endfor %}
