--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,6 @@
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css"> -->
     <link rel="stylesheet" href="/static/app.css">
 </head>
 
@@ -48,6 +47,6 @@
     crossorigin="anonymous"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.2.1.js"></script> -->
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
-<script src="static/app.js" defer></script>
+<script src="/static/app.js" defer></script>
 
 </html>
