--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -26,8 +26,8 @@
             <br>
             <br>
             <p style="text-align: center;">Already have an account?</p>
-            <button href="/login" class="btn btn-primary btn-lg btn-block">Login</button>
         </form>
+        <button onclick="location.href='/login'" class="btn btn-primary btn-lg btn-block">Login</button>
     </div>
 </div>
 {% endblock %}
